--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@
 
 # Logs and cache
 *.npm
+*.sln
 *.log
 *.tgz
+.tags*
 npm-debug.log*
+
+# IDE stuff
+/.idea/
+*.xcodeproj
+*.swp
+*.pyc
+*.VC.db
+*.VC.VC.opendb
+.vs/
+.vscode/
+*.vcxproj
+*.vcxproj.user
+*.vcxproj.filters
