--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -12,7 +12,7 @@
 
 - title: Layout
   pages:
-    - title: Overview
+    - title: Skeleton
     - title: Header
     - title: Footer
     - title: Content
